# cloudssifier

./: .gitignore  hello.py  pyproject.toml
mlruns/0/: meta.yaml
notebooks/: cloudssifier.ipynb
