[project]
name = "cloudssifier"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.5"
dependencies = [
    "click>=8.1.3",
    "icecream>=2.1.3",
    "mlflow>=2.18.0",
    "pip>=24.3.1",
    "pyyaml>=6.0.2",
    "seaborn>=0.13.2",
    "torch>=2.5.1",
    "torchmetrics>=1.6.0",
    "torchvision>=0.20.1",
    "zenml>=0.71.0",
]
